tests/ui/parser/issues/issue-22712.stderr
error: generic args in patterns require the turbofish syntax
  --> $DIR/issue-22712.rs:6:12
   |
LL |     let Foo<Vec<u8>>
   |            ^
   |
help: use `::<...>` instead of `<...>` to specify lifetime, type, or const arguments
   |
LL |     let Foo::<Vec<u8>>
   |            ++

error: aborting due to 1 previous error

